syntax = "proto3";
package lavanet.lava.dualstaking;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lavanet/lava/dualstaking/params.proto";
import "lavanet/lava/dualstaking/delegate.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lavanet/lava/v4/x/dualstaking/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lavanet/lava/dualstaking/params";
  }

  // Queries a delegator for all its providers.
  rpc DelegatorProviders(QueryDelegatorProvidersRequest) returns (QueryDelegatorProvidersResponse) {
    option (google.api.http).get = "/lavanet/lava/dualstaking/delegator_providers/{delegator}";
  }

  // Queries a provider for all its delegators.
  rpc ProviderDelegators(QueryProviderDelegatorsRequest) returns (QueryProviderDelegatorsResponse) {
    option (google.api.http).get = "/lavanet/lava/dualstaking/provider_delegators/{provider}";
  }

  // Queries a the unclaimed rewards of a delegator.
  rpc DelegatorRewards(QueryDelegatorRewardsRequest) returns (QueryDelegatorRewardsResponse) {
    option (google.api.http).get = "/lavanet/lava/dualstaking/delegator_rewards/{delegator}/{provider}/{chain_id}";
  }

  // Queries a the unclaimed rewards of a delegator.
  rpc DelegatorRewardsList(QueryDelegatorRewardsRequest) returns (QueryDelegatorRewardsResponse) {
    option (google.api.http).get = "/lavanet/lava/dualstaking/delegator_rewards/{delegator}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryDelegatorProvidersRequest {
  string delegator = 1;
  bool with_pending = 2;
}

message QueryDelegatorProvidersResponse {
  repeated Delegation delegations = 1 [(gogoproto.nullable) = false];
}

message QueryProviderDelegatorsRequest {
  string provider = 1;
  bool with_pending = 2;
}

message QueryProviderDelegatorsResponse {
  repeated Delegation delegations = 1 [(gogoproto.nullable) = false];
}

message QueryDelegatorRewardsRequest {
  string delegator = 1;
  string provider = 2;
  string chain_id = 3;
}

message QueryDelegatorRewardsResponse {
  repeated DelegatorRewardInfo rewards = 1 [(gogoproto.nullable) = false];
}

message DelegatorRewardInfo {
  reserved 2;
  string provider = 1;
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
];
}